--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/drawer": "^6.6.2",
@@ -16,6 +17,7 @@
     "expo-font": "^11.1.1",
     "expo-linear-gradient": "~12.1.2",
     "expo-linking": "~4.0.1",
+    "expo-notifications": "~0.18.1",
     "expo-router": "^1.2.0",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.2",
@@ -29,12 +31,14 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.7",
-    "yarn": "^1.22.19",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "eslint": "^8.42.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-react": "^7.32.2"
   },
   "resolutions": {
     "metro": "^0.73.7",
